# sparkdown

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/sparkdown-cli/: Cargo.toml
crates/sparkdown-cli/src/: main.rs
crates/sparkdown-cli/src/commands/: extract.rs  init.rs  mod.rs  overlay.rs  render.rs  validate.rs
crates/sparkdown-core/: Cargo.toml
crates/sparkdown-core/src/: annotation.rs  ast.rs  error.rs  frontmatter.rs  lib.rs  parser.rs  postprocess.rs  prefix.rs  preprocess.rs
crates/sparkdown-ontology/: Cargo.toml
crates/sparkdown-ontology/src/: lib.rs  pack.rs  registry.rs
crates/sparkdown-ontology/src/builtins/: dublin_core.rs  foaf.rs  mod.rs  schema_org.rs  sparkdown.rs
crates/sparkdown-overlay/: Cargo.toml
crates/sparkdown-overlay/src/: anchor.rs  graph.rs  lib.rs  mapping.rs  sidecar.rs  sync.rs  vocab.rs
crates/sparkdown-overlay/tests/: integration.rs
crates/sparkdown-render/: Cargo.toml
crates/sparkdown-render/src/: html_rdfa.rs  jsonld.rs  lib.rs  traits.rs  turtle.rs
docs/: ui.md
docs/roadmap/: ui.md
docs/superpowers/plans/: 2026-03-21-sparkdown-studio-phase1.md  2026-03-21-sparkdown-studio-phase2-plan.md  2026-03-24-rig-blocksuite-poc.md
docs/superpowers/specs/: 2026-03-21-semantic-overlay-design.md  2026-03-21-sparkdown-studio-phase2-design.md  2026-03-21-sparkdown-studio-planning-notes.md  2026-03-21-sparkdown-studio-tauri-design.md  2026-03-21-sparkdown-studio-ui-design.md  2026-03-24-ai-agent-orchestration-framework.md  2026-03-24-rig-blocksuite-poc.md
pocblock/: .env.example  CLAUDE.md  README.md  justfile  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
pocblock/agent-server/: Cargo.toml
pocblock/agent-server/src/: config.rs  doc_bridge.rs  doc_writer.rs  main.rs  routes.rs  yjs_client.rs
pocblock/agent-server/src/agents/: entity_detector.rs  mod.rs  question_generator.rs  summarizer.rs
pocblock/src/lib/: editor.ts  sync.ts
pocblock/src/lib/blocks/: agent-note-component.ts  agent-note-schema.ts  agent-note-service.ts  agent-note-spec.ts  index.ts
pocblock/src/lib/extensions/: agent-note.ts
pocblock/src/routes/: +layout.ts  +page.svelte
pocblock/sync-server/: package-lock.json  package.json  server.js  start.sh
studio/: package.json  pnpm-lock.yaml  vite.config.ts
studio/src/: app.html
studio/src-tauri/: Cargo.toml  tauri.conf.json
studio/src-tauri/.cargo/: config.toml
studio/src-tauri/capabilities/: default.json
studio/src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  pack_types.rs  registry.rs  session.rs  types.rs
studio/src/lib/components/: CodeMirrorEditor.svelte  EditorPane.svelte  EntityCreationPopup.svelte  EntityCreator.svelte  EntityDetail.svelte  EntityList.svelte  FileTree.svelte  KnowledgePanel.svelte  PropertyEditor.svelte  Sidebar.svelte  SuggestionRibbon.svelte  SuggestionTray.svelte
studio/src/lib/editor/: entity-decorations.ts  mode-transitions.ts  semantic-gutter.ts  stale-anchor-nudge.ts  stale-anchor-widget.ts  whisper-tooltip.ts
studio/src/lib/stores/: document.svelte.ts  events.ts  workspace.svelte.ts
studio/src/lib/tauri/: commands.ts
studio/src/lib/theme/: colors.ts  tokens.css
studio/src/routes/: +page.svelte
tests/fixtures/: basic.md  event.md  event.md.sparkdown-sem
tests/fixtures/edits/: delete_section.md  insert_paragraph.md  reword_heading.md
tests/fixtures/legacy/: inline_annotated.md
