[workspace]
resolver = "2"
members = [
    "crates/sparkdown-core",
    "crates/sparkdown-ontology",
    "crates/sparkdown-render",
    "crates/sparkdown-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/yestechgroup/sparkdown"

[workspace.dependencies]
# Parsing
pulldown-cmark = "0.12"
gray_matter = "0.2"
regex = "1"

# RDF
oxrdf = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Internal crates
sparkdown-core = { path = "crates/sparkdown-core" }
sparkdown-ontology = { path = "crates/sparkdown-ontology" }
sparkdown-render = { path = "crates/sparkdown-render" }
