[package]
name = "sparkdown-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sparkdown-core = { workspace = true }
sparkdown-ontology = { workspace = true }
sparkdown-render = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
