[package]
name = "sparkdown-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pulldown-cmark = { workspace = true }
gray_matter = { workspace = true }
regex = { workspace = true }
oxrdf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
