[package]
name = "sparkdown-overlay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sparkdown-core = { workspace = true }
sparkdown-ontology = { workspace = true }
oxrdf = { workspace = true }
similar = { workspace = true }
rust-lapper = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
