[package]
name = "sparkdown-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sparkdown-core = { workspace = true }
sparkdown-ontology = { workspace = true }
oxrdf = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
