[package]
name = "sparkdown-agent-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.33"
yrs = "0.21"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
