[package]
name = "sparkdown-studio"
version = "0.1.0"
edition = "2024"

[lib]
name = "sparkdown_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
sparkdown-core = { path = "../../crates/sparkdown-core" }
sparkdown-overlay = { path = "../../crates/sparkdown-overlay" }
sparkdown-render = { path = "../../crates/sparkdown-render" }
sparkdown-ontology = { path = "../../crates/sparkdown-ontology" }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
oxrdf = { workspace = true }

[build-dependencies]
tauri-build = { version = "2" }
